[package]
name = "crypto_api"
version = "0.1.9"
edition = "2018"
authors = ["Keziah Biermann <development@kizzycode.de>"]
description = "This crate defines a general purpose API for various cryptographic primitives"
license = "BSD-2-Clause OR MIT"
repository = "https://github.com/KizzyCode/crypto_api"
readme = "README.md"

[dependencies]
